--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		"https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1280px-HTML5_logo_and_wordmark.svg.png" width = "200"
 		<hr>
 		<p> Exercices: <a target="_blank" href="file:///E:/ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1 <a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.2.html">Exercice2
-		<a target="_blank" href="file:///E:/ICS3U-Tarte/Exercices.html/ISC3U-Exerc.3.html#3">Exercice3 <a target="_blank" href="">Exercice4</p>
+		<a target="_blank" href="file:///E:/ICS3U-Tarte/Exercices.html/ISC3U-Exerc.3.html#3">Exercice3 <a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc4.html">Exercice4</p>
 		
 		<h3>Mes ajouts CSS</h3>
 		<img src =
@@ -34,4 +34,5 @@
 		
 	</body>
 	
+
 </html>
