--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<img src =
 		"https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1280px-HTML5_logo_and_wordmark.svg.png" width = "200"
 		<hr>
-		<p> Exercices: <a target="_blank" href="file:///E:/ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1 <a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.2.html">Exercice2
-		<a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.3.html">Exercice3 <a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.4.html">Exercice4</p>
+		<p> Exercices: <a target="_blank" href="file:///E:/ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1 </a> <a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.2.html">Exercice2 </a>
+		<a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.3.html">Exercice3 </a> <a target="_blank" href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.4.html">Exercice4 </a></p>
 		
 		<h3>Mes ajouts CSS</h3>
 		<img src =
@@ -35,3 +35,6 @@
 	</body>
 	
 </html>
+	
+</html>
+
