--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<body style="background-color: #C6D4F0;">
 	<center>
-		<h1>Cours ICS3U - Génie Informatique)</h1>
+		<h1>Cours ICS3U - Génie Informatique</h1>
 		
 		<p>Voici mes <u>travaux accomplis</u> durant le semestre. <b> <i>Oui, ils sont tous ici!</b></i></p>
 		</center>
@@ -52,10 +52,10 @@ ul li a:hover {
 } </style>
 <center>
 		<ul>
-		<li><a href="file:///E:/ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1</a></li>
-		<li><a href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.2.html">Exercice2</a></li>
-		<li><a href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.3.html">Exercice3</a></li>
-		<li><a href="file:///E:/ICS3U-Tarte/ISC3U-Exerc.4.html">Exercice4</a></li>
+		<li><a href="ICS3U-Exerc.1.html">Exercice1</a></li>
+		<li><a href="ISC3U-Exerc.2.html">Exercice2</a></li>
+		<li><a href="ISC3U-Exerc.3.html">Exercice3</a></li>
+		<li><a href="ISC3U-Exerc.4.html">Exercice4</a></li>
 		
 		</ul>
 		
