--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ ul li a:hover {
 } </style>
 <center>
 		<ul>
-		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1</a></li>
-		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.2.html">Exercice2</a></li>
+		<li><a href="ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1</a></li>
+		<li><a href="ICS3U-Tarte/ICS3U-Exerc.2.html">Exercice2</a></li>
 		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.3.html">Exercice3</a></li>
 		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.4.html">Exercice4</a></li>
 		
@@ -80,3 +80,4 @@ ul li a:hover {
 	</body>
 	
 </html>
+
