--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Index, répertoire de tous les travaux accomplis durant le cours -->
+<!-- NE FONCTIONNE PAS -->
 
 <!DOCTYPE html>
 
@@ -80,5 +80,6 @@ ul li a:hover {
 	</body>
 	
 </html>
+
 
 
