--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- NE FONCTIONNE PAS -->
+<!-- Index, répertoire de tous les travaux accomplis durant le cours -->
 
 <!DOCTYPE html>
 
@@ -49,7 +49,8 @@ ul li a {
 ul li a:hover {
   background-color: #EDEDF3;
   
-} </style>
+} 
+		</style>
 <center>
 		<ul>
 		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1</a></li>
@@ -80,6 +81,3 @@ ul li a:hover {
 	</body>
 	
 </html>
-
-
-
