--- a/ICS3U-Exerc.1.html
+++ b/ICS3U-Exerc.1.html
@@ -10,7 +10,7 @@
 	</head>
 	
 	<body style="background-color: #F5F2FF;">
-	<a href="/ICS3U-Tarte/index.html"> <img src="Images/Maisonicone.png" width="30"/> </a>
+	<a href="index.html"> <img src="Maisonicone.png" width="30"/> </a>
 		<h1>Cours ICS3U - Génie Informatique</h1>
 		<p>Bienvenue au cours d'informatique 11e ! Voici un paragaphe de HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML </p>
 		<p>Voici un paragraphe de CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS CSS </p>
