--- a/ICS3U-Exerc.2.html
+++ b/ICS3U-Exerc.2.html
@@ -10,7 +10,7 @@
 	</head>
 	
 	<body style="background-color: #F5F2FF;">
-	<a href="/ICS3U-Tarte/index.html"> <img src="Images/Maisonicone.png" width="30"/> </a>
+	<a href="index.html"> <img src="Maisonicone.png" width="30"/> </a>
 		<h1>Cours ICS3U - Génie Informatique</h1>
 		<p>Voici mes <u>travaux accomplis</u> durant le semestre. <b> <i>Quel succès!</b></i></p>
 		<h3>Mes pages HTML</h3>
