--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ ul li a:hover {
 		</style>
 <center>
 		<ul>
-		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.1.html">Exercice1</a></li>
-		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.2.html">Exercice2</a></li>
-		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.3.html">Exercice3</a></li>
-		<li><a href="/ICS3U-Tarte/ICS3U-Exerc.4.html">Exercice4</a></li>
+		<li><a href="ICS3U-Exerc.1.html">Exercice1</a></li>
+		<li><a href="ICS3U-Exerc.2.html">Exercice2</a></li>
+		<li><a href="ICS3U-Exerc.3.html">Exercice3</a></li>
+		<li><a href="ICS3U-Exerc.4.html">Exercice4</a></li>
 		
 		</ul>
 		
