--- a/ICS3U-Exerc.4.html
+++ b/ICS3U-Exerc.4.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/Css/styles.css" />
   </head>
   <body>
-  <a href="index.html"> <img src="Maisonicone.png" width="30"/> </a>
+  <a href="index.html"> <img src="Images/Maisonicone.png" width="30"/> </a>
       <h1 class="title">Tableau</h1>
       <p id="currentTime"></p>
       <script src="script.js"></script>
@@ -126,4 +126,5 @@
         
       </table>
   </body>
+
 </html>
