--- a/ICS3U-Exerc.3.html
+++ b/ICS3U-Exerc.3.html
@@ -10,7 +10,7 @@
 	</head>
 	
 	<body style="background-color: #F5F2FF;">
-	<a href="index.html"> <img src="Maisonicone.png" width="30"/> </a>
+	<a href="index.html"> <img src="Images/Maisonicone.png" width="30"/> </a>
 		<a name="haut"></a>
 		<h1>Mes animaux préférés!</h1>
 	
@@ -72,5 +72,6 @@ ul li a:hover {
 	</body>
 	
 </html>
+
 
 
