--- a/index.html
+++ b/index.html
@@ -25,31 +25,7 @@
 		<h2> Exercices: </h2> </center>
 		<p>
 		<style>
-		ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #FFFFFF;
-}
-
-ul li {
-  
-  float: center;
-}
-
-ul li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-ul li a:hover {
-  background-color: #EDEDF3;
-  
-} 
+		<link rel="stylesheet" href="CSS/Stylemenu1.css">
 		</style>
 <center>
 		<ul>
@@ -80,4 +56,5 @@ ul li a:hover {
 		
 	</body>
 	
+
 </html>
