--- a/ICS3U-Exerc.3.html
+++ b/ICS3U-Exerc.3.html
@@ -62,12 +62,13 @@ ul li a:hover {
 		
 		<h3>Chouette cendrée</h3>
 		<img src =
-		"Images/IMG_9822" width = "500" />
+		"Images/IMG_9822g-crop-rs.jpg" width = "500" />
 		<p> Voici de l'info: <a target="_blank" href="https://fr.wikipedia.org/wiki/Chouette_lapone">Information</a><h1> <a href="#haut"> <img src="https://cdn-icons-png.flaticon.com/512/44/44603.png" width="50"/></a> </h1></p>
 		
 
 	</body>
 	
 </html>
+
 
 
