--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<center>
 		<h3>Mes ajouts CSS</h3>
 		<img src =
-		"Images/CSS.png" width = "150"
+		"Images/CSSmieux.png" width = "150"
 		hr>
 		
 		<p>À venir ...</p>
@@ -58,4 +58,5 @@
 	
 
 </html>
+
 
