--- a/ICS3U-Exerc.3.html
+++ b/ICS3U-Exerc.3.html
@@ -3,40 +3,15 @@
 		<meta charset="UTF-8">
 		<title>Exercice 3 HTML</title>
 	</head>
-	
+	<a name="haut"></a>
 	<body style="background-color: #F5F2FF;">
 <a href="index.html"> <img src="Images/Maisonicone.png" width="30"/> </a>
-		<a name="haut"></a>
+		
 		<h1>Mes animaux préférés!</h1>
 	
 
 		<p>Voici mes <u>animaux préférés</u> et des descriptions. <b> <i>Essayez les liens!</b></i></p>
-		<style>
-		ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #FFFFFF;
-}
-
-ul li {
-  
-  float: center;
-}
-
-ul li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-ul li a:hover {
-  background-color: #EDEDF3;
-  
-} </style>
+		<link rel="stylesheet" href="CSS/Stylemenu1.css">
 		<ul>
 		  <li><a href="#1">Porc-épic</a></li>
 		  <li><a href="#2">Requin-tigre</a></li>
@@ -69,6 +44,5 @@ ul li a:hover {
 	</body>
 	
 </html>
-
 
 
