--- a/ICS3U-Exerc.4.html
+++ b/ICS3U-Exerc.4.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/Css/styles.css" />
   </head>
   <body>
+  <center>
   <a href="index.html"> <img src="Images/Maisonicone.png" width="30"/> </a>
       <h1 class="title">Tableau</h1>
       <p id="currentTime"></p>
@@ -123,8 +124,9 @@
           <td>Blah blah blah</td> 
           
         </tr>
-        
+        </center>
       </table>
   </body>
 
 </html>
+
